Fixes stars background to wrap

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -51,17 +51,9 @@ a{
 }
 
 body{
-    height:100%;
-    width:100%;
-    background-image: url("/assets/img/stars.png");
-}
-
-.star_image
-{
     min-height: 100%;
     min-width: 100%;
-    height:100%;
-    width:100%;
+    background-image: url("/assets/img/stars.png");
 }
 
 .social-links{
